--- a/src/styles/__theme_colors.scss
+++ b/src/styles/__theme_colors.scss
@@ -524,3 +524,41 @@
   --c-neutral-800: 30, 41, 59;
   --c-neutral-900: 15, 23, 42;
 }
+
+.theme-360adventures {
+  --c-primary-900: 17, 65, 54;
+  --c-primary-800: 40, 84, 74;
+  --c-primary-700: 64, 103, 94;
+  --c-primary-600: 88, 122, 114;
+  --c-primary-500: 112, 141, 134;
+  --c-primary-400: 136, 160, 154;
+  --c-primary-300: 159, 179, 174;
+  --c-primary-200: 183, 198, 194;
+  --c-primary-100: 207, 217, 214;
+  --c-primary-50: 231, 236, 234;
+  // SECONDARY COLOR
+
+  --c-secondary-900: 17, 175, 141;
+  --c-secondary-800: 40, 183, 152;
+  --c-secondary-700: 64, 191, 163;
+  --c-secondary-600: 88, 199, 175;
+  --c-secondary-500: 112, 207, 186;
+  --c-secondary-400: 136, 215, 198;
+  --c-secondary-300: 159, 223, 209;
+  --c-secondary-200: 183, 231, 220;
+  --c-secondary-100: 207, 239, 232;
+  --c-secondary-50: 231, 247, 243;
+
+
+  // NEUTRAL COLOR
+  --c-neutral-50: 248, 250, 252;
+  --c-neutral-100: 241, 245, 249;
+  --c-neutral-200: 226, 232, 240;
+  --c-neutral-300: 203, 213, 225;
+  --c-neutral-400: 148, 163, 184;
+  --c-neutral-500: 100, 116, 139;
+  --c-neutral-600: 71, 85, 105;
+  --c-neutral-700: 51, 65, 85;
+  --c-neutral-800: 30, 41, 59;
+  --c-neutral-900: 15, 23, 42;
+}
